unpackaged/objects/BrainEngine_Artifact__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Highest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Lowest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>BE_Release__c</referenceTo>
        <relationshipLabel>BrainEngine Artifacts</relationshipLabel>
        <relationshipName>BrainEngine_Artifacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-opened (not fixed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Artifacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>auto__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>d__c</fullName>
        <label>d</label>
        <summarizedField>ERD__c.Number__c</summarizedField>
        <summaryForeignKey>ERD__c.BrainEngine_Artifact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <formula>&quot;gggg&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula</label>
        <type>Text</type>
    </fields>
    <label>BrainEngine Artifact</label>
    <nameField>
        <label>Artifact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BrainEngine Artifacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>